--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/xml2js": "^0.4.14",
     "@uploadthing/react": "^7.3.0",
     "ai": "^4.3.4",
     "better-auth": "1.2.8-beta.1",
@@ -91,6 +92,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nuqs": "^2.4.1",
+    "openai": "^5.11.0",
     "prettier-plugin-prisma": "^5.0.0",
     "preview-email": "^3.1.0",
     "react": "^19.1.0",
@@ -109,6 +111,7 @@
     "uploadthing": "^7.6.0",
     "use-media": "^1.5.0",
     "vaul": "^1.1.2",
+    "xml2js": "^0.6.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
